2005-03-02  Douglas Bates  <bates@bates1-home>

	* src/nlmefit.c (gls_loglik): Replaced rnkm1 by p.

	* po/,inst/po/: Added localization support.

2004-11-04  Douglas Bates  <bates@bates1-home>

	* src/nlmefit.c (dimFree): Fix memory leak reported by Brian Ripley.

2004-11-03  Douglas Bates  <bates@bates1-home>

	* man/varWeights.Rd: Remove all calls to data()

	* man/corExp.Rd: Remove all references to the mva package

2004-08-10  Douglas Bates  <bates@bates1-home>

	* man/pairs.compareFits.Rd: fix syntax errors (new check available
	in R CMD check)

2004-01-14  Douglas Bates  <bates@stat.wisc.edu>

	* man/getCovariate.varFunc.Rd: Syntax correction from Kurt.

2003-12-16  Douglas Bates  <bates@stat.wisc.edu>

	* install.R: Create stored image

2003-08-29  Douglas Bates  <bates@stat.wisc.edu>

	* tests/lme.Rout.save (Coefficients): Now consistent with
	i386-linux result.

	* src/base.h: Replace R_ext/Mathlib.h by Rmath.h

2003-08-09  Douglas Bates  <bates@stat.wisc.edu>

	* man/Covariate.varFunc.Rd, man/Matrix.pdMat.Rd, man/Matrix.reStruct.Rd, man/Names.pdMat.Rd, man/Names.reStruct.Rd, man/coef.corStruct.Rd, man/coef.modelStruct.Rd, man/coef.pdMat.Rd, man/coef.reStruct.Rd, man/coef.varFunc.Rd, man/getData.lmList.Rd, man/gnls.Rd:
	Use \method for replacement method documentation as per Rd changes

	* R/lme.R:
	Changed check for intercept-like column in getFixDF (PR#2418)

2003-06-12  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION: New release

	* man/ranef.lmList.Rd, man/nlme.Rd: Overdocumented arguments

2003-06-10  Douglas Bates  <bates@stat.wisc.edu>

	* man/MathAchSchool.Rd, man/MathAchieve.Rd, ChangeLog, DESCRIPTION, R/groupedData.R, inst/scripts/ch03.R, inst/scripts/ch04.R:
	Release 3.1-42

	* inst/scripts/ch01.R: Protecting power in formula

2003-06-10  Douglas Bates  <bates@stat.wisc.edu>

	* R/groupedData.R: Fixed bug in groupedData constructor when outer
	is not missing.

2003-05-16  Douglas Bates  <bates@stat.wisc.edu>
