@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-56
-Date: 2005-03-02
+Version: 3.1-57
+Date: 2005-04-04
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
@@ -9,9 +9,9 @@ Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
         Deepayan Sarkar <deepayan@stat.wisc.edu> 
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit and compare Gaussian linear and nonlinear mixed-effects models.
-Depends: graphics, stats, R(>= 2.0.0)
+Depends: graphics, stats, R(>= 2.1.0)
 Imports: lattice
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Wed Mar  2 21:18:07 2005; bates
+Packaged: Mon Apr  4 09:28:47 2005; bates
