@@ -1,20 +1,28 @@
 
-R : Copyright 2000, The R Development Core Team
-Version 1.2.0  (2000-12-15)
+R : Copyright 2005, The R Foundation for Statistical Computing
+Version 2.1.0 alpha (2005-04-04), ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
-Type `license()' or `licence()' for distribution details.
+Type 'license()' or 'licence()' for distribution details.
 
 R is a collaborative project with many contributors.
-Type `contributors()' for more information.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
 
-Type `demo()' for some demos, `help()' for on-line help, or
-`help.start()' for a HTML browser interface to help.
-Type `q()' to quit R.
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for a HTML browser interface to help.
+Type 'q()' to quit R.
 
 > library(nlme)
-Loading required package: nls 
+
+Attaching package: 'nlme'
+
+
+	The following object(s) are masked from package:stats :
+
+	 contr.SAS 
+
 > data(Oxboys)
 > fm1 <- lmList(Oxboys)
 > fm1
